Clean up image manager and use name as entity ids
* the entity store now uses entity name instead of ID as the key
	- this makes the API friendlier
* image manager cleaned up a little bit
* generate code using the CI image to ensure compatibility with CI

Testing Done
* added list handler test
* builder still has NO TESTS
